crates/pardosa/tests/ui/no_external_authoritative_backend_impl.stderr
error[E0277]: the trait bound `ForeignBackend: pardosa::authoritative::sealed::Sealed` is not satisfied
 --> tests/ui/no_external_authoritative_backend_impl.rs:3:31
  |
3 | impl AuthoritativeBackend for ForeignBackend {}
  |                               ^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `pardosa::authoritative::sealed::Sealed` is not implemented for `ForeignBackend`
 --> tests/ui/no_external_authoritative_backend_impl.rs:2:1
  |
2 | struct ForeignBackend;
  | ^^^^^^^^^^^^^^^^^^^^^
help: the following other types implement trait `pardosa::authoritative::sealed::Sealed`
 --> src/authoritative.rs
  |
  | impl sealed::Sealed for PgnoBackend {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `PgnoBackend`
...
  | impl sealed::Sealed for JetStreamBackend {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `JetStreamBackend`
note: required by a bound in `AuthoritativeBackend`
 --> src/authoritative.rs
  |
  | pub trait AuthoritativeBackend: sealed::Sealed {}
  |                                 ^^^^^^^^^^^^^^ required by this bound in `AuthoritativeBackend`
  = note: `AuthoritativeBackend` is a "sealed trait", because to implement it you also need to implement `pardosa::authoritative::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            pardosa::store::PgnoBackend
            pardosa::store::JetStreamBackend
            pardosa::authoritative::jetstream::JetStreamBackendAdapter
