crates/pardosa/tests/ui/no_external_authoritative_backend_impl.rs
use pardosa::store::AuthoritativeBackend;
struct ForeignBackend;
impl AuthoritativeBackend for ForeignBackend {}
fn main() {}
